--- a/src/partials/our_products.html
+++ b/src/partials/our_products.html
@@ -1,93 +1,116 @@
-<section>
-  <h2>Our products</h2>
-  <ul>
-    <li>
-      <img
-        srcset="/img/orange.png 1x, /img/orange@2x.png 2x"
-        src="/img/orange.png"
-        alt="Orange chocolate"
-        width="230"
-      />
-      <h3>Orange</h3>
-      <p>Dark chocolate</p>
-      <span>45 UAH</span>
-    </li>
-    <li>
-      <img
-        srcset="/img/apple_cran.png 1x, /img/apple_cran@2x.png 2x"
-        src="/img/apple_cran.png"
-        alt="Apple&cranberry chocolate"
-        width="230"
-      />
-        <h3>APPLE&CRANBERRY</h3>
-        <p>Milk chocolate</p>
-        <span>50 UAH</span>
-    </li>
-    <li>
-      <img
-        srcset="/img/lime_salt.png 1x, /img/lime_salt@2x.png 2x"
-        src="/img/lime_salt.png"
-        alt="Lime&sea salt chocolate"
-        width="230"
-      />
-        <h3>Lime&sea salt</h3>
-        <p>Dark chocolate</p>
-        <span>66 UAH</span>
-    </li>
-    <li>
-      <img
-        srcset="/img/pineapple.png 1x, /img/pineapple@2x.png 2x"
-        src="/img/pineapple.png"
-        alt="Pineapple chocolate"
-        width="230"
-      />
-        <h3>Pineapple</h3>
-        <p>Dark chocolate</p>
-        <span>54 UAH</span>
-    </li>
-    <li>
-      <img
-        srcset="/img/classic_milk.png 1x, /img/classic_milk@2x.png 2x"
-        src="/img/classic_milk.png"
-        alt="Classic milk chocolate"
-        width="230"
-      />
-        <h3>Classic</h3>
-        <p>Milk chocolate</p>
-        <span>45 UAH</span>
-    </li>
-    <li>
-      <img
-        srcset="/img/honey.png 1x, /img/honey@2x.png 2x"
-        src="/img/honey.png"
-        alt="Honey chocolate"
-        width="230"
-      />
-        <h3>Honey</h3>
-        <p>Milk chocolate</p>
-        <span>50 UAH</span>
-    </li>
-    <li>
-      <img
-        srcset="/img/roasted_fruits.png 1x, /img/roasted_fruits@2x.png 2x"
-        src="/img/roasted_fruits.png"
-        alt="Roasted fruits chocolate"
-        width="230"
-      />
-        <h3>Roasted fruits</h3>
-        <p>Dark chocolate</p>
-        <span>66 UAH</span>
-    </li>
-    <li>
-      <img
-        srcset="/img/classic_white.png 1x, /img/classic_white@2x.png 2x"
-        src="/img/classic_white.png"
-        alt="Classic white chocolate"
-        width="230"
-      />
-        <h3>Classic</h3>
-        <p>White chocolate</p>
-        <span>54 UAH</span>
-    </li>
-  </ul>
+<section id="our-products">
+  <div class="container">
+    <h2 class="products-title">
+      Our <span class="title-slogan">products</span>
+    </h2>
+    <div class="products-swiper swiper">
+      <ul class="products-list swiper-wrapper">
+        <li class="products-item swiper-slide">
+          <img
+            srcset="/img/orange.png 1x, /img/orange@2x.png 2x"
+            src="/img/orange.png"
+            alt="Orange chocolate"
+            width="230"
+          />
+          <h3 class="products-caption">Orange</h3>
+          <p class="products-text">Dark chocolate</p>
+          <div class="price-container">
+            <span class="products-price">45 UAH</span>
+          </div>
+        </li>
+        <li class="products-item swiper-slide">
+          <img
+            srcset="/img/apple_cran.png 1x, /img/apple_cran@2x.png 2x"
+            src="/img/apple_cran.png"
+            alt="Apple&cranberry chocolate"
+            width="230"
+          />
+          <h3 class="products-caption">APPLE&CRANBERRY</h3>
+          <p class="products-text">Milk chocolate</p>
+          <div class="price-container">
+            <span class="products-price">50 UAH</span>
+          </div>
+        </li>
+        <li class="products-item swiper-slide">
+          <img
+            srcset="/img/lime_salt.png 1x, /img/lime_salt@2x.png 2x"
+            src="/img/lime_salt.png"
+            alt="Lime&sea salt chocolate"
+            width="230"
+          />
+          <h3 class="products-caption">Lime&sea salt</h3>
+          <p class="products-text">Dark chocolate</p>
+          <div class="price-container">
+            <span class="products-price">66 UAH</span>
+          </div>
+        </li>
+        <li class="products-item swiper-slide">
+          <img
+            srcset="/img/pineapple.png 1x, /img/pineapple@2x.png 2x"
+            src="/img/pineapple.png"
+            alt="Pineapple chocolate"
+            width="230"
+          />
+          <h3 class="products-caption">Pineapple</h3>
+          <p class="products-text">Dark chocolate</p>
+          <div class="price-container">
+            <span class="products-price">54 UAH</span>
+          </div>
+        </li>
+        <li class="products-item swiper-slide">
+          <img
+            srcset="/img/classic_milk.png 1x, /img/classic_milk@2x.png 2x"
+            src="/img/classic_milk.png"
+            alt="Classic milk chocolate"
+            width="230"
+          />
+          <h3 class="products-caption">Classic</h3>
+          <p class="products-text">Milk chocolate</p>
+          <div class="price-container">
+            <span class="products-price">45 UAH</span>
+          </div>
+        </li>
+        <li class="products-item swiper-slide">
+          <img
+            srcset="/img/honey.png 1x, /img/honey@2x.png 2x"
+            src="/img/honey.png"
+            alt="Honey chocolate"
+            width="230"
+          />
+          <h3 class="products-caption">Honey</h3>
+          <p class="products-text">Milk chocolate</p>
+          <div class="price-container">
+            <span class="products-price">50 UAH</span>
+          </div>
+        </li>
+        <li class="products-item swiper-slide">
+          <img
+            srcset="/img/roasted_fruits.png 1x, /img/roasted_fruits@2x.png 2x"
+            src="/img/roasted_fruits.png"
+            alt="Roasted fruits chocolate"
+            width="230"
+          />
+          <h3 class="products-caption">Roasted fruits</h3>
+          <p class="products-text">Dark chocolate</p>
+          <div class="price-container">
+            <span class="products-price">66 UAH</span>
+          </div>
+        </li>
+        <li class="products-item swiper-slide">
+          <img
+            srcset="/img/classic_white.png 1x, /img/classic_white@2x.png 2x"
+            src="/img/classic_white.png"
+            alt="Classic white chocolate"
+            width="230"
+          />
+          <h3 class="products-caption">Classic</h3>
+          <p class="products-text">White chocolate</p>
+          <div class="price-container">
+            <span class="products-price">54 UAH</span>
+          </div>
+        </li>
+      </ul>
+      <div class="products-swiper-pagination swiper-pagination"></div>
+    </div>
+  </div>
 </section>
