--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -1,5 +1,5 @@
 .subscribe {
-        background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/img/production_mobile.jpg');
+        background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/img/production_mobile@2x.jpg');
         background-repeat: no-repeat;
         background-position: center top;
         background-size: cover;
@@ -27,6 +27,18 @@
                 url('/img/production_mobile@2x.jpg');
         }
     }
+
+        @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) and (min-width: 768px) {
+            .subscribe {
+                background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+                    rgba(46, 47, 66, 0.7),
+                    url('/img/production_tablet@2x.jpg');
+            }
+        }
+       
       
     /*@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
         screen and (min-resolution: 190dpi) and (min-width: 768px),
@@ -37,7 +49,7 @@
                         url('/img/production_tablet@2x.jpg');
                 }
         }
-                @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
                 screen and (min-resolution: 190dpi) and (min-width: 1200px),
                 screen and (min-resolution: 2dppx) and (min-width: 1200px) {
                     .subscribe {
@@ -45,7 +57,7 @@
                             rgba(46, 47, 66, 0.7),
                             url('/img/production_desktop@2x.jpg');
                     }
-                }*/
+       }*/
 
 
 .subscribe-title {
@@ -85,20 +97,30 @@ color: var(--color-white);
 }
 
 .btn-subscribe {
-        font-family: 'Montserrat';
-        font-style: normal;
+        width: 128px;
+        height: 41px;
         font-weight: 600;
-        font-size: 18px;
-        line-height: 1.222;
+        font-size: 14px;
+        line-height: 1.214;
         color: var(--color-white);
         align-items: center;
-        padding: 14px 40px;
+        padding: 12px 28px;
         border: none;
-        width: 172px;
-        height: 50px;
         background: #FD9222;
         border-radius: 100px;
         margin-top: 24px;
+        text-align: center;
+    }
+
+    @media screen and (min-width: 768px) {
+        .btn-subscribe {
+            font-size: 18px;
+            line-height: 1.222;
+            width: 172px;
+            height: 50px;
+            padding: 14px 40px;
+        }
+        
     }
 
     .btn-subscribe:hover,
@@ -205,10 +227,10 @@ color: var(--color-white);
        pointer-events: none;
 }
 
-/*.backdrop.is-hidden .modal {
+.backdrop.is-hidden .subscribe-modal {
        transform: scale(0);
 
-}*/
+}
 
 
               /* Form modal */
@@ -217,7 +239,8 @@ color: var(--color-white);
        max-width: 263px;
        width: 100%;
        position: absolute;
-       bottom: 40px;
+       bottom: 32px;
+       left: 24px;
       
 
 }
@@ -226,6 +249,8 @@ color: var(--color-white);
             max-width: 458px;
             width: 100%;
             position: absolute;
+            bottom: 40px;
+            left: 40px;
             gap: 14px;
     
         }
@@ -246,7 +271,7 @@ color: var(--color-white);
     color: #111111;
     margin-bottom: 24px;
     margin-top: 32px;
-    margin-left: 24px;
+    /*margin-left: 24px;*/
 }
 @media screen and (min-width: 768px){
     .subscribe-title-modal {
@@ -255,7 +280,7 @@ color: var(--color-white);
         max-width: 298px;
         font-size: 24px;
         line-height: 1.166;
-        margin-left: 40px;
+        /*margin-left: 40px;*/
         margin-top: 40px;
     }
     
@@ -275,9 +300,8 @@ color: var(--color-white);
     max-width: 263px;
     width: 100%;
     height: 45px;
-    gap: 14px;
     margin-right: 24px;
-    margin-left: 24px;
+    /*margin-left: 24px;*/
 }
 
 @media screen and (min-width: 768px) {
@@ -287,7 +311,7 @@ color: var(--color-white);
         height: 56px;
         gap: 14px;
         margin-right: 40px;
-        margin-left: 40px;
+        /*margin-left: 40px;*/
     }
        
 }
@@ -298,7 +322,7 @@ color: var(--color-white);
         gap: 14px;
        margin-top: 24px;
        margin-right: 24px;
-       margin-left: 24px;
+       /*margin-left: 24px;*/
     }
 
 }
@@ -321,6 +345,7 @@ color: var(--color-white);
             letter-spacing: -0.02em;
             width: 313px;
             height: 52px;
+           
         }
 }
 
