--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -9,10 +9,10 @@
             and handcrafted with the utmost care, each piece is a work of art
             that is sure to please.
         </p>
-        <button class="btn-subscribe" data-modal-open type="button">Subscribe</button>
+        <button class="btn-subscribe" data-subscribe-modal-open type="button">Subscribe</button>
        
     </div>
-    <div class="subscribe-backdrop is-hidden" data-modal>
+    <div class="subscribe-backdrop is-hidden" data-subscribe-modal>
         <div class="subscribe-modal">
             <div class="thumb-img">
                 <img srcset="./img/subscribe_mobile.jpg 1x, /img/subscribe_mobile@2x.jpg 2x" 
@@ -20,7 +20,7 @@
                 alt="Chocolate">
             
             </div>
-            <button class="subscribe-modal-close" data-modal-close type="button">
+            <button class="subscribe-modal-close" data-subscribe-modal-close type="button">
                 <svg class="close-icon">
                     <use href="/img/icons.svg#icon-close"></use>
     
@@ -34,7 +34,7 @@
                     <div class="subscribe-input-wrap">
                         <input type="email" name="user_email" id="user_email"
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Enter your email"/>
-                            <button class="subscribe-btn-form-send" type="submit" data-modal-close>Submit</button>
+                            <button class="subscribe-btn-form-send" type="submit" data-subscribe-modal-close>Submit</button>
     
                     </div>
                                       
